--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <a> <link> <a href= "https://ashleytaylor0712.github.io/hello-world/">Ashley</a>
 
-<a> <link> <a href="dallas180.github.io/hello-world/" >Dallas</a>
+<a> <link> <a href="https://dallas180.github.io/hello-world/" >Dallas</a>
 </section>
 </body>
 <footer> <h6>
