--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="En">
 <head>
-    <header>Table 11 Amigos</head>
-    <title>Table 11 Amigos</title>
+    <header></header>
+    <h1>Table 11 Amigos</h1>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -15,11 +16,16 @@
 <section>
 <h3></h3>
 <section> Roar like a Lion.
-<section>
-<p>Bacon ipsum dolor sit amet ground round pastrami rump, t-bone pork belly tenderloin frankfurter salami landjaeger tail shoulder. Tongue pork loin bresaola brisket, sausage spare ribs drumstick pig. Tongue biltong turducken, hamburger boudin pork belly jerky t-bone chuck flank pork chop. Landjaeger meatball porchetta, pork belly flank meatloaf ball tip tenderloin prosciutto chuck. Tail short ribs hamburger flank bacon, ham swine tongue turkey ground round drumstick beef jowl landjaeger.
+<section></section>
+<h4>
+    <h4>
+        Bacon ipsum dolor sit amet ground round pastrami rump, t-bone pork belly tenderloin frankfurter salami landjaeger tail shoulder. Tongue pork loin bresaola brisket, sausage spare ribs drumstick pig. Tongue biltong turducken, hamburger boudin pork belly jerky t-bone chuck flank pork chop. Landjaeger meatball porchetta, pork belly flank meatloaf ball tip tenderloin prosciutto chuck. Tail short ribs hamburger flank bacon, ham swine tongue turkey ground round drumstick beef jowl landjaeger.
 
-</p>
-<section>Check out the 3 amigos websites down below. See you there.
+<section>
+    <h5>
+
+        Check out the 3 amigos websites down below. See you there.
+        
 </section>
 <a> <link> <a href= "https://tiffanirice23.github.io/hello-world/">Tiffani</a>
 
