--- a/index.html
+++ b/index.html
@@ -1,40 +1,61 @@
 <!DOCTYPE html>
 <html lang="En">
+
 <head>
-    <header></header>
-    <h1>Table 11 Amigos</h1>
+
+    <title>Table 11 Amigos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <header>
+        <h1>Table 11 amigos</h1>
+    </header>
     <main>
-<section> 
-<img src="clement-roy-MUeeyzsjiY8-unsplash.jpg" alt="lions" img>
-<h2>
-<section>   
+        <section>
+            <img src="clement-roy-MUeeyzsjiY8-unsplash.jpg" alt="lions" />
+        </section>
+
+        <script>
+
+            alert("Warning you're about to see some Lions...");
+            console.log("If you found this,I told you..");
+            document.write("I love lions");
+        </script>
 
 
-<section>
-<h3></h3>
-<section> Roar like a Lion.
-<section></section>
-<h4>
-    <h4>
-        Bacon ipsum dolor sit amet ground round pastrami rump, t-bone pork belly tenderloin frankfurter salami landjaeger tail shoulder. Tongue pork loin bresaola brisket, sausage spare ribs drumstick pig. Tongue biltong turducken, hamburger boudin pork belly jerky t-bone chuck flank pork chop. Landjaeger meatball porchetta, pork belly flank meatloaf ball tip tenderloin prosciutto chuck. Tail short ribs hamburger flank bacon, ham swine tongue turkey ground round drumstick beef jowl landjaeger.
+        <h1> Roar like a Lion.</h1>
+        <section>
+            <p> Bacon ipsum dolor sit amet ground round pastrami rump, t-bone pork belly tenderloin frankfurter salami
+                landjaeger tail shoulder. Tongue pork loin bresaola brisket, sausage spare ribs drumstick pig. Tongue
+                biltong turducken, hamburger boudin pork belly jerky t-bone chuck flank pork chop. Landjaeger meatball
+                porchetta, pork belly flank meatloaf ball tip tenderloin prosciutto chuck. Tail short ribs hamburger
+                flank bacon, ham swine tongue turkey ground round drumstick beef jowl landjaeger.
+            </p>
 
-<section>
-    <h5>
 
-        Check out the 3 amigos websites down below. See you there.
-        
-</section>
-<a> <link> <a href= "https://tiffanirice23.github.io/hello-world/">Tiffani</a>
+            <section>
+                <h5>
 
-<a> <link> <a href= "https://ashleytaylor0712.github.io/hello-world/">Ashley</a>
+                    Check out the 3 amigos websites down below. See you there.
+                </h5>
+            </section>
 
-<a> <link> <a href="https://dallas180.github.io/hello-world/">Dallas</a>
-</section>
+            <a href="https://tiffanirice23.github.io/hello-world/">Tiffani</a>
+
+
+            <a href="https://ashleytaylor0712.github.io/hello-world/">Ashley</a>
+
+
+            <a href="https://dallas180.github.io/hello-world/">Dallas</a>
+        </section>
+
+        <footer>
+            <h6>
+                &copy;dallas180
+            </h6>
+        </footer>
 </body>
-<footer> <h6>
-    &copy;dallas180
-</h6></footer>
+
+
 </html>
