--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="En">
-
-<head>
+    
+    <head>
+    <script src="script.js"></script>
 
     <title>Table 11 Amigos</title>
     <link rel="stylesheet" href="styles.css">
@@ -12,27 +13,22 @@
         <h1>Table 11 amigos</h1>
     </header>
     <main>
+        
+        <script>getotheruserName()</script>
+        <script>getLionsName()</script>
         <section>
             <img src="clement-roy-MUeeyzsjiY8-unsplash.jpg" alt="lions" />
         </section>
-
-        <script>
-
-            alert("Warning you're about to see some Lions...");
-            console.log("If you found this,I told you..");
-            document.write("I love lions");
-        </script>
-
-
+<script>getOtherOtherUserName()</script>
         <h1> Roar like a Lion.</h1>
         <section>
             <p> Bacon ipsum dolor sit amet ground round pastrami rump, t-bone pork belly tenderloin frankfurter salami
                 landjaeger tail shoulder. Tongue pork loin bresaola brisket, sausage spare ribs drumstick pig. Tongue
                 biltong turducken, hamburger boudin pork belly jerky t-bone chuck flank pork chop. Landjaeger meatball
                 porchetta, pork belly flank meatloaf ball tip tenderloin prosciutto chuck. Tail short ribs hamburger
-                flank bacon, ham swine tongue turkey ground round drumstick beef jowl landjaeger.
+                 flank bacon, ham swine tongue turkey ground round drumstick beef jowl landjaeger.
             </p>
-
+<script>getuserName()</script>
 
             <section>
                 <h5>
@@ -55,6 +51,7 @@
                 &copy;dallas180
             </h6>
         </footer>
+ 
 </body>
 
 
