--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script>getotheruserName()</script>
         <script>getLionsName()</script>
         <section>
-            <img src="clement-roy-MUeeyzsjiY8-unsplash.jpg" alt="lions" />
+            <img src="lionPics/lion12.jpeg" alt="lions" />
         </section>
 <script>getOtherOtherUserName()</script>
         <h1> Roar like a Lion.</h1>
